apps/prometheus/node-exporter-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-node-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
subsets:
  - addresses:
      - ip: 192.168.178.162
    ports:
      - port: 9100
        name: metrics
