apps/prometheus/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-node-exporter
  namespace: prometheus
  labels:
    app: proxmox-node-exporter
    app.kubernetes.io/name: proxmox-node-exporter
spec:
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
