apps/prometheus/zfs-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-zfs-exporter
  namespace: prometheus
  labels:
    app.kubernetes.io/name: proxmox-zfs-exporter
subsets:
  - addresses:
      - ip: 192.168.178.162
    ports:
      - port: 9134
        name: metrics
