apps/prometheus/zfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-zfs-exporter
  namespace: prometheus
  labels:
    app: proxmox-zfs-exporter
spec:
  ports:
    - name: metrics
      port: 9134
      targetPort: 9134
